--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,20 @@
+@import "variables";
+@import "header";
+@import "menu";
+@import "recommended";
+@import "categories";
+@import "footer";
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
+  font-family: "Space Grotesk", sans-serif;
   margin: 0;
+}
+
+.container {
+  max-width: 1260px;
+  margin: 0 auto;
 }
