--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -22,7 +22,7 @@
     line-height: 48px;
   }
   &__text {
-    font-family: Space Mono;
+    font-family: "Space Mono", sans-serif;
     line-height: 22.4px;
     display: flex;
     flex-direction: column;
