--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,9 +1,20 @@
+@mixin form {
+  width: 100%;
+  border-radius: 8px;
+  border: 2px solid #f8f8f8;
+  background-color: #f8f8fa;
+  font-size: 14px;
+  line-height: 19.6px;
+  color: $text-color;
+}
+
 .footer {
   margin-top: 120px;
   &__container {
     width: 100%;
     height: 460px;
     overflow: hidden;
+    scroll-snap-align: start;
   }
   &__image {
     width: 100%;
@@ -11,17 +22,21 @@
     object-fit: cover;
   }
   &__about {
-    margin-top: 56px;
+    margin: 0 auto;
     max-width: 1260px;
+    margin-top: 56px;
     display: flex;
     justify-content: space-between;
+    scroll-snap-align: start;
   }
   &__title {
+    margin: 0;
     font-size: 48px;
     font-weight: 700;
     line-height: 48px;
   }
   &__text {
+    width: 498px;
     font-family: "Space Mono", sans-serif;
     line-height: 22.4px;
     display: flex;
@@ -31,10 +46,74 @@
 }
 
 .contact {
+  margin: 0 auto;
+  max-width: 1260px;
   margin-top: 120px;
   &__title {
     font-size: 48px;
     font-weight: 700;
     line-height: 48px;
+  }
+  &__form {
+    margin-top: 56px;
+    max-width: 411px;
+  }
+  &__name {
+    height: 48px;
+
+    @include form;
+  }
+  &__email {
+    height: 48px;
+    margin-top: 16px;
+
+    @include form;
+  }
+  &__message {
+    height: 148px;
+    margin-top: 16px;
+
+    @include form;
+  }
+  &__submit {
+    margin-bottom: 120px;
+    width: 100%;
+    height: 56px;
+    margin-top: 32px;
+    font-weight: 700;
+    line-height: 27px;
+    background-color: $text-color;
+    color: white;
+    border: 2px solid #f0f1f4;
+    border-radius: 8px;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #f8f8fa;
+      border: 2px solid #f0f1f4;
+      color: $text-color;
+    }
+    &:active {
+      background-color: black;
+      color: white;
+    }
+  }
+  &__container {
+    display: flex;
+    gap: 111px;
+    justify-content: space-between;
+  }
+  &__headline {
+    color: #9393a3;
+    font-size: 14px;
+    line-height: 19.6px;
+  }
+  &__text {
+    font-family: "Space Mono", sans-serif;
+    font-size: 16px;
+    line-height: 22.4px;
+  }
+  &__contacts {
+    width: 498px;
   }
 }
