--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  scroll-snap-align: start;
   &__top {
     display: flex;
     justify-content: space-between;
