--- a/src/styles/recommended.scss
+++ b/src/styles/recommended.scss
@@ -2,6 +2,7 @@
   margin-top: 120px;
   padding: 0 $content-padding;
   color: $text-color;
+  scroll-snap-align: start;
   &__headline {
     margin: 0;
     font-size: 48px;
