--- a/src/styles/categories.scss
+++ b/src/styles/categories.scss
@@ -1,11 +1,13 @@
 .categories {
   padding: 0 $content-padding;
   scroll-snap-align: start;
-  h2 {
+
+  &__title {
     font-size: 48px;
     font-weight: 700;
     line-height: 48px;
   }
+
   &__items {
     justify-content: center;
     margin-top: 56px;
@@ -13,30 +15,38 @@
     flex-direction: column;
     gap: 56px;
     flex-grow: 1;
+
     h3 {
       margin: 16px 0 0;
       font-size: 24px;
       font-weight: bold;
     }
   }
+
   &__imgs {
     display: flex;
     gap: 24px;
-    flex-grow: 1;
-    &__wide {
-      width: 67%;
-    }
-    &__square {
-      width: 33%;
-    }
   }
+
+  &__wide {
+    max-width: 67%;
+    overflow: hidden;
+  }
+
+  &__square {
+    max-width: 33%;
+    overflow: hidden;
+  }
+
   &__item {
     transition: all 400ms;
+
     &:hover {
       cursor: pointer;
       transform: scale(1.05);
     }
   }
+
   &__button {
     margin-top: 56px;
     width: 324px;
@@ -47,15 +57,68 @@
     font-weight: 700;
     line-height: 27px;
     text-align: center;
+
     &:hover {
       cursor: pointer;
       background-color: #f8f8fa;
       border: 2px solid #f0f1f4;
       color: $text-color;
     }
+
     &:active {
       background-color: black;
       color: white;
     }
   }
+}
+
+@media screen and (max-width: 744px) {
+  .categories {
+    padding: 0 $content-padding-tablet;
+
+    &__title {
+      font-size: 40px;
+    }
+
+    h3 {
+      font-size: 18px;
+    }
+
+    &__button {
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .categories {
+    padding: 0 $content-padding-mobile;
+
+    &__title {
+      font-size: 32px;
+    }
+
+    &__items {
+      gap: 40px;
+    }
+
+    &__square {
+      width: 48.5%;
+      object-fit: cover;
+    }
+
+    &__wide {
+      width: 48.5%;
+      object-fit: cover;
+    }
+
+    &__imgs {
+      gap: 20px;
+    }
+
+    &__button {
+      width: 100%;
+    }
+  }
+
 }
