--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -10,33 +10,43 @@
 
 .footer {
   margin-top: 120px;
+  margin-bottom: 120px;
+
   &__container {
     width: 100%;
     height: 460px;
     overflow: hidden;
     scroll-snap-align: start;
   }
+
   &__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
-  &__about {
+
+  &__content {
+    padding: 0 $content-padding;
     margin: 0 auto;
     max-width: 1260px;
+  }
+
+  &__about {
     margin-top: 56px;
     display: flex;
     justify-content: space-between;
     scroll-snap-align: start;
   }
+
   &__title {
+    min-width: 287px;
     margin: 0;
     font-size: 48px;
     font-weight: 700;
     line-height: 48px;
   }
+
   &__text {
-    width: 498px;
     font-family: "Space Mono", sans-serif;
     line-height: 22.4px;
     display: flex;
@@ -46,37 +56,40 @@
 }
 
 .contact {
-  margin: 0 auto;
-  max-width: 1260px;
   margin-top: 120px;
+  scroll-snap-align: start;
+
   &__title {
     font-size: 48px;
     font-weight: 700;
     line-height: 48px;
   }
+
   &__form {
     margin-top: 56px;
-    max-width: 411px;
   }
+
   &__name {
     height: 48px;
 
     @include form;
   }
+
   &__email {
     height: 48px;
     margin-top: 16px;
 
     @include form;
   }
+
   &__message {
     height: 148px;
     margin-top: 16px;
 
     @include form;
   }
+
   &__submit {
-    margin-bottom: 120px;
     width: 100%;
     height: 56px;
     margin-top: 32px;
@@ -93,27 +106,79 @@
       border: 2px solid #f0f1f4;
       color: $text-color;
     }
+
     &:active {
       background-color: black;
       color: white;
     }
   }
+
   &__container {
     display: flex;
     gap: 111px;
     justify-content: space-between;
   }
+
   &__headline {
     color: #9393a3;
     font-size: 14px;
     line-height: 19.6px;
   }
+
   &__text {
     font-family: "Space Mono", sans-serif;
     font-size: 16px;
     line-height: 22.4px;
+    scroll-snap-align: end;
   }
+
   &__contacts {
     width: 498px;
+  }
+}
+
+@media screen and (max-width: 744px) {
+  .footer {
+    &__title {
+      font-size: 40px;
+    }
+
+    &__content {
+      padding: 0 $content-padding-tablet;
+    }
+  }
+
+  .contact {
+    &__button {
+      width: 100%;
+    }
+
+    &__title {
+      font-size: 40px;
+    }
+
+    &__container {
+      flex-direction: column;
+      gap: 80px;
+    }
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    margin-top: 96px;
+
+    &__container {
+      height: 200px;
+    }
+
+    &__content {
+      padding: 0 $content-padding-mobile;
+    }
+
+    &__about {
+      flex-direction: column;
+      gap: 24px;
+    }
   }
 }
