fix titles for tablet and mobile

--- a/src/styles/recommended.scss
+++ b/src/styles/recommended.scss
@@ -75,6 +75,7 @@
 
     &__headline {
       font-size: 40px;
+      line-height: 40px;
     }
 
     &__cards {
@@ -96,6 +97,7 @@
 
     &__headline {
       font-size: 32px;
+      line-height: 32px;
     }
   }
 
