--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -16,7 +16,8 @@
     width: 100%;
     height: 460px;
     overflow: hidden;
-    scroll-snap-align: start;
+
+    // scroll-snap-align: start;
   }
 
   &__image {
@@ -35,7 +36,8 @@
     margin-top: 56px;
     display: flex;
     justify-content: space-between;
-    scroll-snap-align: start;
+
+    // scroll-snap-align: start;
   }
 
   &__title {
@@ -57,7 +59,8 @@
 
 .contact {
   margin-top: 120px;
-  scroll-snap-align: start;
+
+  // scroll-snap-align: start;
 
   &__title {
     font-size: 48px;
@@ -129,7 +132,8 @@
     font-family: "Space Mono", sans-serif;
     font-size: 16px;
     line-height: 22.4px;
-    scroll-snap-align: end;
+
+    // scroll-snap-align: end;
   }
 
   &__contacts {
