--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -9,7 +9,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  scroll-snap-align: start;
+
+  // scroll-snap-align: start;
 
   &__top {
     display: flex;
