--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,5 +1,7 @@
 @mixin form {
-  width: 100%;
+  padding: 14px 16px;
+  resize: none;
+  width: calc(100% - 28px);
   border-radius: 8px;
   border: 2px solid #f8f8f8;
   background-color: #f8f8fa;
@@ -49,6 +51,7 @@
   }
 
   &__text {
+    width: 498px;
     font-family: "Space Mono", sans-serif;
     line-height: 22.4px;
     display: flex;
@@ -69,6 +72,7 @@
   }
 
   &__form {
+    max-width: 411px;
     margin-top: 56px;
   }
 
@@ -153,6 +157,10 @@
   }
 
   .contact {
+    &__form {
+      max-width: 100%;
+    }
+
     &__button {
       width: 100%;
     }
@@ -171,6 +179,10 @@
 @media screen and (max-width: 320px) {
   .footer {
     margin-top: 96px;
+
+    &__text {
+      width: 100%;
+    }
 
     &__container {
       height: 200px;
