--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -14,18 +14,12 @@
   margin-top: 120px;
   margin-bottom: 120px;
 
-  &__container {
+  &__image {
+    background-image: url(/src/images/footer.png);
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
     height: 460px;
-    overflow: hidden;
-
-    // scroll-snap-align: start;
-  }
-
-  &__image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
 
   &__content {
@@ -151,6 +145,10 @@
       font-size: 40px;
     }
 
+    &__image {
+      height: 400px;
+    }
+
     &__content {
       padding: 0 $content-padding-tablet;
     }
@@ -184,7 +182,7 @@
       width: 100%;
     }
 
-    &__container {
+    &__image {
       height: 200px;
     }
 
